# Mirai

./: .gitignore  README.md  requirements.txt  run_inference_demo.sh  run_predict_demo.sh  setup.cfg
configs/: mirai_trained.json
demo/: validate.sh
onconet/: predict.py
onconet/configs/: mirai_trained.json  mirai_trained_v0.7.0.json
onconet/datasets/: abstract_onco_dataset.py  factory.py  mnist.py
onconet/models/: __init__.py  calibrator.py  factory.py  mirai_full.py
onconet/transformers/: image.py  tensor.py
onconet/utils/: c_index.py  dicom.py  logging_utils.py  parsing.py  risk_factors.py
scripts/: inference.py  main.py
tests/: test_inference.py  test_loader.py  test_models.py  test_predict.py  test_transformers.py  test_utils.py
tests/test_data/: Mirai_pred_rf_callibrator_mar12_2022_values.csv  inbreast_table_v01.tsv
