[metadata]
name = onconet
version = attr: onconet.__version__
author = Adam Yala
author_email = adamyala@mit.edu
description = Sharing Deep Learning Models for Breast Cancer Risk
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/reginabarzilaygroup/Mirai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[easy_install]
find_links =
    https://download.pytorch.org/whl/cu117/torch_stable.html

[options]
packages = find:
include_package_data = True
python_requires = >=3.8, <3.9
install_requires =
    gitpython==3.1.26
    imageio==2.13.1
    mock==4.0.3
    numpy==1.24.*
    Pillow==9.0.0
    pydicom==2.3.0
    pylibjpeg[all]>=2.0.0
    torch==1.9.0
    torchvision==0.10.0
    tqdm==4.62.3

[options.entry_points]
console_scripts =
    mirai-predict = onconet.predict:main

# Include config files
[options.package_data]
* = *.json

# Add non-required dependencies. Only need these for training
[options.extras_require]
test =
    pytest
    pandas
    scikit-learn>=0.23.2
train =
    lifelines==0.24.15
    scikit-image>=0.18.2
    scikit-learn>=0.23.2
    scipy>=1.7.3
all =
    %(test)s
    %(train)s
