[metadata]
name = onconet
version = attr: onconet.__version__
author = Adam Yala
author_email = adamyala@mit.edu
description = Sharing Deep Learning Models for Breast Cancer Risk
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/reginabarzilaygroup/Mirai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    gitpython~=3.1.43
    imageio~=2.36.0
    mock~=5.1.0
    numpy~=2.1.2
    Pillow~=11.0.0
    pydicom~=3.0.1
    pylibjpeg[all]~=2.0.0
    torch~=2.5.1
    torchvision~=0.20.1
    tqdm~=4.66.6

[options.entry_points]
console_scripts =
    mirai-predict = onconet.predict:main

# Include config files
[options.package_data]
* = *.json

# Add non-required dependencies. Only need these for training
[options.extras_require]
test =
    pytest
    pandas
    scikit-learn~=1.5.2
train =
    lifelines==0.24.15
    scikit-image>=0.18.2
    scikit-learn~=1.5.2
    scipy~=1.14.1
all =
    %(test)s
    %(train)s
